[gd_scene load_steps=3 format=3 uid="uid://b6ojq77wue4oe"]

[ext_resource type="FontFile" uid="uid://bqt6s0iqt8dpe" path="res://fonts/roboto/Roboto-Light.ttf" id="1_cfiqm"]
[ext_resource type="Script" uid="uid://tb4tmr7cmgop" path="res://windows/settingsWindow/options/WindowOption.gd" id="1_l8dex"]

[node name="WindowOption" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20
script = ExtResource("1_l8dex")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 19

[node name="ModeTitle" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_cfiqm")
theme_override_font_sizes/normal_font_size = 40
text = " Modo:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModeOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_cfiqm")
theme_override_font_sizes/font_size = 25
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Janela"
popup/item_0/id = 0
popup/item_1/text = "Tela Cheia"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ResolutionTitle" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_cfiqm")
theme_override_font_sizes/normal_font_size = 40
text = " Resolução:"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_cfiqm")
theme_override_font_sizes/font_size = 25
alignment = 1

[connection signal="item_selected" from="VBoxContainer/ModeOptionButton" to="." method="_on_mode_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
